src/test/deca/syntax/invalid/renduInter01/01missing_if.deca
// Description:
//      Programme lexicalement incorrect
//      => une instruction conditionnelle if...else doit débuter par une branche if
//
// Resultats:
//      Erreur syntaxique
//      Ligne 11 : token 'else' inattendu

{
    int x = 4;
    else (x == 4) {
        println("hello else_if2 : ", x);
    }

}
